--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@heroicons/react": "^2.0.18",
     "bootstrap-icons": "^1.10.5",
     "framer-motion": "^10.13.0",
@@ -17,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-multi-carousel": "^2.8.4",
     "react-spring-3d-carousel": "^1.3.4",
+    "sweetalert2": "^11.7.20",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
