--- a/package.json
+++ b/package.json
@@ -16,10 +16,7 @@
     "framer-motion": "^10.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-multi-carousel": "^2.8.4",
-    "react-spring-3d-carousel": "^1.3.4",
-    "sweetalert2": "^11.7.20",
-    "uuid": "^9.0.0"
+    "sweetalert2": "^11.7.20"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
