--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@heroicons/react": "^2.0.18",
+    "atropos": "^2.0.2",
     "bootstrap-icons": "^1.10.5",
     "framer-motion": "^10.13.0",
     "react": "^18.2.0",
